--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -81,6 +81,20 @@ month={Nov},
 pages={33–45}
 }
 
+@Article{Cuk2004,
+title={Gas-drag-assisted capture of Himalia’s family},
+volume={167},
+url={http://dx.doi.org/10.1016/j.icarus.2003.09.026},
+DOI={10.1016/j.icarus.2003.09.026},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Ćuk, Matija and Burns, Joseph A.},
+year={2004},
+month={Feb},
+pages={369–381}
+}
+
 @article{Nesvorny2004,
 title={Collisional Origin of Families of Irregular Satellites},
 volume={127},
