--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -210,9 +210,9 @@ We present in this paper stellar occultation predictions for the 7 major irregul
 
 %\textcolor{red}{E dizer que, mesmo que a hipotese de TNOs que nos motiva a fazer as predicoes, venha a ser refutada no futuro, seja por outros trabalhos, seja pelos resultados futuros de observacoes de nossas proprias ocultacoes, o levantamento em si das propriedades fisicas, tamanho, forma e albedo ainda assim seriam muito uteis para testar as hiposteses de captura, ou seja, contribui para o estudo da formacao e evolucao dos sistemas de Jupiter, Saturno e Netuno.}
 
-As explicited in section \ref{Sec: introducao}, there is no consensus on a single model about the region where the irregular satellites were formed. \cite{Cuk2004} showed that the progenitor of the Himalia group may have origin in heliocentric orbits similar to the Hilda asteroid group.
+As explicited in section \ref{Sec: introducao}, there is no consensus on a single model about the region where the irregular satellites were formed. \cite{Cuk2004} showed that the progenitor of the Himalia group may have origin in heliocentric orbits similar to the Hilda asteroid group. \cite{Sheppard2005} stated that the irregular satellites may be some of the objects that were formed within the giant planets region. \cite{Sheppard2005} and \cite{Jewitt2007} also expose the possibility for the irregular satellites having their origin as comets or similar to the TNOs.
 
-Phoebe, the most studied irregular satellite, was identified by \cite{Clark2005} that its surface is probably covered by material of cometary origin. It was also stated by \cite{Johnson2005} that if the porosity of Phoebe would be of about 15\%, Phoebe would have an uncompressed density similar to those of Pluto and Triton.
+Phoebe, the most studied irregular satellite, was identified by \cite{Clark2005} that its surface is probably covered by material of cometary origin. It was also stated by \cite{Johnson2005} that if the porosity of Phoebe would be of about 15\%, which the authors believe it is possible, Phoebe would have an uncompressed density similar to those of Pluto and Triton.
 
 Triton is a special satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit is very small and its precession is not dominated by Solar perturbations, Triton is frequently excluded of the irregular satellites' class, but studied together by many authors \citep{Sheppard2005, Jewitt2007}. 
 
@@ -236,7 +236,7 @@ Similarly to the irregular satellites, Triton was probably capture in the early 
 
 \cite{GomesJunior2015} published 6523 precise positions for 18 irregular satellites from observations made at the Observatório do Pico dos Dias (OPD), Observatoire Haute-Provence (OHP) and European Southern Observatory (ESO) between 1992 and 2014. They showed that the orbits of the irregular satellites of the giant planets have systematic errors. The offsets of the observations relative to the JPL ephemeris could be up to 200 mas for some satellites. These differences could be associated with errors in their orbital elements.
 
-Making a new model for the orbits of these objects would demand a lot of time and delay the publication of predictions of possible events to occur in the very near future. Thus, we utilized the positions obtained by \cite{GomesJunior2015} to identify error patterns in the ephemeris. The error patterns in right ascension and in declination could be used to extrapolate the offsets to the satellite ephemeris by the time of the predicted occultation, improving it. Plots of the offsets over true anomaly (see Fig. \ref{Fig:offxtanom} for declination offsets of Carme, for instance) clearly show the systematic errors in the JPL ephemeris.
+Making a new model for the orbits of these objects would demand a lot of time and delay the publication of predictions of possible events to occur in the very near future. Thus, we utilized the positions obtained by \cite{GomesJunior2015} to identify error patterns in the ephemeris. The error patterns in right ascension and in declination could be used to extrapolate the offsets to the satellite ephemeris by the time of the predicted occultation, improving it. Plots of the offsets over true anomaly (see Fig. \ref{Fig:offxanom} for declination offsets of Carme, for instance) clearly show the systematic errors in the JPL ephemeris.
 
 %\begin{figure}
 %\begin{centering}
@@ -247,9 +247,10 @@ Making a new model for the orbits of these objects would demand a lot of time an
 
 \begin{figure*}
 \begin{centering}
-\subfigure[Offset from the JPL ephemeris]{\includegraphics[scale=0.25]{figures/DEC_anom.png} \label{Fig:offxtanomxjpl}}
-\subfigure[\textcolor{red}{Offset from the numerical integration}]{\includegraphics[scale=0.25]{figures/DEC_anom.png} \label{Fig:offxtanomxni}}
-\caption{Offsets of the declination of Carme by true anomaly from the JPL ephemeris and \textcolor{red}{from the numerical integration from the positions obtained in \cite{GomesJunior2015}}.}
+\subfigure[Offset from the JPL ephemeris]{\includegraphics[width=8.8cm]{figures/DEC_anom.png} \label{Fig:offxtanomxjpl}}
+\subfigure[\textcolor{red}{Offset from the numerical integration}]{\includegraphics[width=8.8cm]{figures/DEC_anom.png} \label{Fig:offxtanomxni}}
+\caption{Offsets of the declination of Carme by true anomaly from the JPL ephemeris and \textcolor{red}{from the numerical integration of the positions obtained in \cite{GomesJunior2015}}.
+\label{Fig:offxanom}}
 \end{centering}
 \end{figure*}
 
@@ -284,10 +285,10 @@ We predicted occultation for the 7 major irregular satellites of Jupiter:  Anank
 
 For Triton and Nereid, the candidates for stellar occultations in 2015 and 2016 was searched using the WFI catalogue in the same way as the predictions for Centaurs and TNOs occultations by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}. This catalogue contains the stars in the path of Neptune in the sky up to mid-2016. The catalogue was generated by observations made at the ESO 2p2 telescope (IAU code 809) using the Wide Field Imager (WFI) CCD mosaic detector. The filter used was the broad-band R filter ESO\#844 with $\lambda_c$ = 651.725 nm and $\Delta\lambda$ = 162.184 nm.
 
-A total of 588 events \textcolor{red}{(Não estou contando ainda os eventos para Tritão)} were identified between January 2015 and December 2017. Table \ref{Tab: occ-list} exemplifies the catalogue of occultations generated and their parameters, which are necessary to produce occultation maps (see Fig. \ref{Fig: ocultacao} as an example). Since these objects are very small, the duration of each event is a few seconds.
+A total of 588 events \textcolor{red}{(Not counting Triton's event yet)} were identified between January 2015 and December 2017. Table \ref{Tab: occ-list} exemplifies the catalogue of occultations generated and their parameters, which are necessary to produce occultation maps (see Fig. \ref{Fig: ocultacao} as an example). Since these objects are very small, the duration of each event is a few seconds.
 
 \begin{table*}
-\caption{\label{Tab: sample-cds} Stellar occultation sampled predictions for Himalia \textcolor{red}{Consertar tabela}}
+\caption{\label{Tab: sample-cds} Stellar occultation sampled predictions for Himalia \textcolor{red}{I still have to fix the table}}
 \begin{centering}
 \begin{tabular}{ccccccccccccccccccccccc}
 \hline 
@@ -335,11 +336,11 @@ Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding
 
 \begin{figure*}
 \begin{centering}
-\subfigure[Nominal prediction]{\includegraphics[width=8.8cm]{figures/Himalia_nominal.eps}  \label{Fig: occ-Himalia-nooff}}
-\subfigure[\textcolor{red}{Offset de Himalia a partir do ajuste}]{\includegraphics[width=8.8cm]{figures/Himalia2_2015-03-03T00:39:18.png}  \label{Fig: occ-Himalia-ajuste}}
+\subfigure[Nominal prediction from JPL]{\includegraphics[width=8.8cm]{figures/Himalia_nominal.eps}  \label{Fig: occ-Himalia-nooff}}
+\subfigure[\textcolor{red}{From the numerical integration}]{\includegraphics[width=8.8cm]{figures/Himalia2_2015-03-03T00:39:18.png}  \label{Fig: occ-Himalia-ajuste}}
 \subfigure[Observation at February 22 (different FOVs)]{\includegraphics[width=8.8cm]{figures/Himalia_22fev.eps}   \label{Fig: occ-Himalia-off22fev}}
 \subfigure[Observation at March 03 (same FOV)]{\includegraphics[width=8.8cm]{figures/Himalia_03mar.eps}   \label{Fig: occ-Himalia-off03mar}}
-\caption{Predictions for Himalia: The big red dot show the geocentric closest approach of the shadow. The black "+" marks at maps (b,c,d) are the nominal prediction closest approach for reference. The small red ones are the center of the shadow separated by one minute. The straight lines show the size of the shadow. \ref{Fig: occ-Himalia-nooff} is the map using the nominal positions of the star and satellite. \ref{Fig: occ-Himalia-ajuste} shows the shadow given an estimated offset for the position of Himalia related to the JPL ephemeris obtained in section \ref{Sec: Offset}. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias. \textcolor{red}{Figura b será mudada após confirmarmos o offset para Himalia}}
+\caption{Predictions for Himalia: The big red dot show the geocentric closest approach of the shadow. The black "+" marks at maps (b,c,d) are the nominal prediction closest approach for reference. The small red ones are the center of the shadow separated by one minute. The straight lines show the size of the shadow. \ref{Fig: occ-Himalia-nooff} is the map using the nominal positions of the star and satellite. \ref{Fig: occ-Himalia-ajuste} shows the shadow given an estimated offset for the position of Himalia related to the JPL ephemeris obtained in section \ref{Sec: Offset}. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias. \textcolor{red}{Figure b waiting for the offset of Himalia}}
 \label{Fig: occ-Himalia}
 \end{centering}
 \end{figure*}
@@ -347,7 +348,7 @@ Figure \ref{Fig: occ-Himalia}shows four zoomed in occultation maps corresponding
 In this event, it is possible to see that the shade does not vary by much among the four maps suggesting thatthere was a good probability of observing the event. In fact, the biggest differences between the shadows of the four maps were \textcolor{red}{22s} along the shadow path and \textcolor{red}{109km} in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
 
 \begin{table}
-\caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015. \textcolor{red}{Tem que ver direito o offset do ajuste}}
+\caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015. \textcolor{red}{Waiting for the right offset}}
 \begin{centering}
 \begin{tabular}{lcc}
 \hline  \hline
@@ -367,7 +368,7 @@ Mar. 03 Obs. & -10s & -19mas (61km)\tabularnewline
 The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 they could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. Still, the differences between the maps obtained were relatively small. The biggest differences between them were \textcolor{red}{74s} along the shadow path and \textcolor{red}{307km} perpendicular to it (see table \ref{Tab: comparison-Elara}).
 
 \begin{table}
-\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015. \textcolor{red}{Tem que ver direito o offset do ajuste}}
+\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015. \textcolor{red}{Waiting for the right offset}}
 \begin{centering}
 \begin{tabular}{lcc}
 \hline  \hline
@@ -415,7 +416,7 @@ Triton &  &  &  &  \tabularnewline
 \hline
 \end{tabular}
 \par \end{centering}
-Occultations predicted using the UCAC4 catalogue. For Nereid and Triton, the occultations in 2015 and 2016 were predicted using the WFI catalogue as explained in Sec. \ref{Sec: predictions}.
+Occultations predicted using the UCAC4 catalogue. For Nereid and Triton, the occultations in 2015 and 2016 were predicted using the WFI catalogue as explained in Sec. \ref{Sec: predictions} \textcolor{red}{Numbers of Triton yet to be written}.
 \end{table}
 
 Concerning the UCAC4 stars, an accuracy of about 20-50 mas in the star position would give a 15-40\% probability of observe such an event by Ananke, the smallest irregular satellite in the sample. For Himalia, the occultation would have 80-100\% probability of success. Combined with a mean accuracy in the position of 30 mas for Himalia and 100 mas for Ananke mas published in Table 2 of \cite{Jacobson2012}, the probability of success would be around 50-80\% for Himalia and $\approx$5\% for Ananke. Observations a few days before the date of occultation predicted may diminish the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
